--- a/decision-tree-centaur-human.ipynb
+++ b/decision-tree-centaur-human.ipynb
@@ -61,7 +61,7 @@
         "from sklearn import tree\n",
         "import random\n",
         "\n",
-        "# Caracteristics [height, pelage_color, weight, hasTail]\n",
+        "# Caracteristics [height, width, pelage_color, weight]\n",
         "COLOR_BLACK = 0\n",
         "TYPE_HUMAN = 0\n",
         "TYPE_CENTAUR = 1\n",
